<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B3237"
    tools:context=".MainActivity">


    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="#F57F17"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First Crack Time"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtMinFc"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="50dp"
                    android:layout_weight="1"
                    android:autofillHints="Enter"
                    android:background="#fff"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/enter"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/minute"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtSecFc"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:autofillHints="Enter"
                    android:background="#fff"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/enter"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/second"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="#FFF57F17"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Development Time Ratio"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtDevTimeRatio"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="60dp"
                    android:autofillHints="Enter"
                    android:background="#fff"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/enter"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/percent"
                    android:textColor="@color/black"
                    android:textSize="35sp"></TextView>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="#FFF57F17"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_roast_time"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtMinRoastTime"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="50dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:ems="10"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/minute"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtSecTotalRoastTime"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:ems="10"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/second"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="#3F51B5"
        android:text="@string/coffee_roasting_calculator"
        android:textAlignment="center"
        android:textColor="#F8F5F5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:textColor="#fff"
        android:id="@+id/btnResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#F57F17"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResult"
        app:srcCompat="@drawable/sonpacamara"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>